# Unix-CMD-for-Windows

./: CMakeLists.txt  README.md  install.bat
src/: apt-get.cpp  cat.cpp  clear.cpp  ls.cpp  rm.cpp  sudo.cpp  touch.cpp
